Fix smooth scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -705,6 +705,7 @@ strong {
 		position: fixed;
 		height: 100%;
 		background-color: #404040;
+		overflow: scroll;
 		
 	}
 	
@@ -741,6 +742,7 @@ strong {
 		position: fixed;
 		height: 100%;
 		background-color: #404040;
+		overflow: scroll;
 		
 	}
 	
@@ -777,6 +779,7 @@ strong {
 		position: fixed;
 		height: 100%;
 		background-color: #404040;
+		overflow: scroll;
 		
 	}
 	
